# geiflix

./: .gitignore  README.md  can_mqtt_vtxt.py  can_mqtt_vtxt.txt
Machine_learning/: Routine.py  cifar_net_V4.pth  global.py
Web_site/flask_app/flask_app/: Demos.html  Makefile  README.md  Team.css  Team.html  coord.css  coord.html  fire_coord.txt  gps.html  gps.php  gpsdata.txt  home.css  index.html  index_map.css  index_map.html  login.html  login.js  map.py  map_for_path.py  parser.py  parser_gps.py  path_coord.txt  receiver.py  style.css  team_save
catkin_ws_jetson/src/: README.md
catkin_ws_pc/src/: README.md
documentation/: README.md
function_0-Raspberry/client_socket/: README.txt  control_path_txt.py  pidcontroller.py  raspberry_vtxt.py
function_0-Raspberry/documentation/: README.md
function_0-Raspberry/python/: README.md  main.py
function_0-Raspberry/scripts/: README.md  pid.py  server.py
function_0-Raspberry/webserver/: confServeurWeb.sh  index.html
function_1-Lidar/: README.txt
function_1-Lidar/ros programs (Jetson)/: README.txt
function_2-Jetson/: CMakeLists.txt  JetsonFollow.cpp
function_2-Jetson/scripts/: README.txt  jetson.py
function_5-Motor-Direction/documentation/: README.md
function_7-Trajectory/trajectory/: CMakeLists.txt
transfert/Jetson/: camera.sh  jetson.py  launch_lidar.sh
transfert/Jetson/ros/qrcode_detection/: CMakeLists.txt
transfert/Jetson/ros/qrcode_detection/msg/: QRCode_Detect_msgs.msg
transfert/raspberry/: .control_path_txt.py.swp  can_mqtt_vtxt.py  control_path_txt.py  pidcontroller.py  raspberry_vtxt.py
(+120 files in other folders)
